force-app/main/default/objects/CommercientSF6__GrnDetails__c/CommercientSF6__GrnDetails__c.object-meta.xml
<CustomObject>
    <label>Syspro GRN Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro GRN Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>