force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__AccConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__AccConvRate__c</fullName>
    <description>AccConvRate</description>
    <label>AccConvRate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>