force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__AccMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__AccMulDiv__c</fullName>
    <description>AccMulDiv</description>
    <label>AccMulDiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>