force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__AccountCur__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__AccountCur__c</fullName>
    <description>AccountCur</description>
    <label>AccountCur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>