force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__AuditTrailPrintd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__AuditTrailPrintd__c</fullName>
    <description>AuditTrailPrintd</description>
    <label>AuditTrailPrintd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>