force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__ConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__ConvRate__c</fullName>
    <description>ConvRate</description>
    <label>ConvRate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>