force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__CostMultFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__CostMultFlag__c</fullName>
    <description>CostMultFlag</description>
    <label>CostMultFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>