force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__CurGrnValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__CurGrnValue__c</fullName>
    <description>CurGrnValue</description>
    <label>CurGrnValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>