force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__CurrencyValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__CurrencyValue__c</fullName>
    <description>CurrencyValue</description>
    <label>CurrencyValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>