force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__DebitRecGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__DebitRecGlCode__c</fullName>
    <description>DebitRecGlCode</description>
    <label>DebitRecGlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>