force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Decimals__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Decimals__c</fullName>
    <description>Decimals</description>
    <label>Decimals</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>