force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__DeliveryNote__c</fullName>
    <description>DeliveryNote</description>
    <label>DeliveryNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>