force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Grn__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Grn__c</fullName>
    <description>Grn</description>
    <label>Grn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>