force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnMatchedFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnMatchedFlag__c</fullName>
    <description>GrnMatchedFlag</description>
    <label>GrnMatchedFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>