force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnMatchedMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnMatchedMonth__c</fullName>
    <description>GrnMatchedMonth</description>
    <label>GrnMatchedMonth</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>