force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnMatchedYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnMatchedYear__c</fullName>
    <description>GrnMatchedYear</description>
    <label>GrnMatchedYear</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>