force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnMonth__c</fullName>
    <description>GrnMonth</description>
    <label>GrnMonth</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>