force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnSource__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnSource__c</fullName>
    <description>GrnSource</description>
    <label>GrnSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>