force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__GrnYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__GrnYear__c</fullName>
    <description>GrnYear</description>
    <label>GrnYear</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>