force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Job__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Job__c</fullName>
    <description>Job</description>
    <label>Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>