force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Journal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Journal__c</fullName>
    <description>Journal</description>
    <label>Journal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>