force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__JournalEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__JournalEntry__c</fullName>
    <description>JournalEntry</description>
    <label>JournalEntry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>