force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__MatchedValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__MatchedValue__c</fullName>
    <description>MatchedValue</description>
    <label>MatchedValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>