force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__OrigGrnValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__OrigGrnValue__c</fullName>
    <description>OrigGrnValue</description>
    <label>OrigGrnValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>