force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__OrigPurchValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__OrigPurchValue__c</fullName>
    <description>OrigPurchValue</description>
    <label>OrigPurchValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>