force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__OrigReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__OrigReceiptDate__c</fullName>
    <description>OrigReceiptDate</description>
    <label>OrigReceiptDate</label>
    <type>DateTime</type>
</CustomField>