force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__PostCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__PostCurrency__c</fullName>
    <description>PostCurrency</description>
    <label>PostCurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>