force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__PriceVarPrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__PriceVarPrinted__c</fullName>
    <description>PriceVarPrinted</description>
    <label>PriceVarPrinted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>