force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Product__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Syspro GRN Details</relationshipLabel>
    <relationshipName>Syspro_GRN_Details</relationshipName>
    <type>Lookup</type>
</CustomField>