force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__PurchaseOrder__c</fullName>
    <description>PurchaseOrder</description>
    <label>PurchaseOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>