force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__PurchaseOrderLin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__PurchaseOrderLin__c</fullName>
    <description>PurchaseOrderLin</description>
    <label>PurchaseOrderLin</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>