force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__QtyReceived__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__QtyReceived__c</fullName>
    <description>QtyReceived</description>
    <label>QtyReceived</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>