force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__QtyUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__QtyUom__c</fullName>
    <description>QtyUom</description>
    <label>QtyUom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>