force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__SourceCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__SourceCode__c</fullName>
    <description>SourceCode</description>
    <label>SourceCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>