force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__StdGrnValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__StdGrnValue__c</fullName>
    <description>StdGrnValue</description>
    <label>StdGrnValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>