force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__StockDescription__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__StockDescription__c</fullName>
    <description>StockDescription</description>
    <label>StockDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>