force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__SubcontractOp__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__SubcontractOp__c</fullName>
    <description>SubcontractOp</description>
    <label>SubcontractOp</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>