force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__SupCatalogueNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__SupCatalogueNum__c</fullName>
    <description>SupCatalogueNum</description>
    <label>SupCatalogueNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>