force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__TriangCurrency__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__TriangCurrency__c</fullName>
    <description>TriangCurrency</description>
    <label>TriangCurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>