force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__TriangMulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__TriangMulDiv__c</fullName>
    <description>TriangMulDiv</description>
    <label>TriangMulDiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>