force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__TriangRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__TriangRate__c</fullName>
    <description>TriangRate</description>
    <label>TriangRate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>