force-app/main/default/objects/CommercientSF6__GrnDetails__c/fields/CommercientSF6__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Warehouse__c</fullName>
    <description>Warehouse</description>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>